<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EditableTextViewTest</string>
    <string name="default_style">Default Style</string>
    <string name="editmode_false">editMode = false</string>
    <string name="showbutton_false">showButton = false</string>
    <string name="editmode_false_showbutton_false">editMode = false. showButton = false</string>
    <string name="custom_drawables">Custom Drawables</string>
    <string name="toggle_below">Toggle Below Text</string>
    <string name="external_control">External Toggle</string>
    <string name="listener_usage">Listener Usage</string>
    <string name="editmode">editMode = %s</string>
    <string name="no_background_on_view_mode">no background on view mode</string>

</resources>
